--- a/public/kamp.html
+++ b/public/kamp.html
@@ -18,11 +18,11 @@
 <meta name="text:Link Title 4" content=""/>
 <meta name="text:Link URL 4" content=""/>
 
-<meta property="og:title" content="いい話と思ったらシェア ジェネレータ「つくし」" />
+<meta property="og:title" content="いい話と思ったらシェアジェネレータ「つくし」" />
 <meta property="og:site_name" content="つくしレコーズ" />
 <meta property="og:type" content="product" />
 <meta property="og:keywords" content="いい話と思ったらシェアジェネレータ「つくし」,いい話と思ったらシェア,つくしレコーズ,ネットレーベル,tuxurecords,つくしレコード,tukushi records"/>
-<meta property="og:image" content="http://hogehoge.jpg" />
+<meta property="og:image" content="iihanashi.jpg" />
 <meta property="fb:admins" content="100001726960606" />
 
 <style type="text/css">
@@ -39,7 +39,6 @@
 body {
       background: #7DB0DF;
       color:#000000;
-      font-family: Helvetica;
       font-size: 16px;
       text-align:center;
       margin: 0
@@ -51,7 +50,7 @@ body {
 #container {
             margin:0px auto 0px;
             text-align:left;
-			width: 100%;
+      width: 100%;
             }
 
 #header {
@@ -91,7 +90,9 @@ body {
   text-align: center;
 }
 
-
+textarea{
+  width: 550px;
+}
 
 </style>
 <meta name="keywords" content="いい話と思ったらシェアジェネレータ「つくし」,いい話と思ったらシェア,つくしレコーズ,ネットレーベル,tuxurecords,つくしレコード,tukushi records" />
@@ -100,75 +101,75 @@ body {
 </head>
 <body>
 <div id="container">
-	<div id="background">
-		<div id="header">
-			<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fhoogehoge.com&amp;layout=button_count&amp;show_faces=false&amp;width=100&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
-			<a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja" data-count="none" data-hashtags="tamakiep2">ツイート</a>
-			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-		</div>
-		<a href="http://tuxurecords.tumblr.com/" target="_blank" alt="つくしレコーズ" title="つくしレコーズ"><img width="120" height="52" border="0" style="position:absolute; left:25px; top:25px; margin:0px; padding:0px" src="tuxu_logo.png" /></a>
-		<div id="title">
-			<p><img src="logo.png" width="855" height="156" alt="いい話と思ったらシェアジェネレータ「つくし」" title="いい話と思ったらシェアジェネレータ「つくし」"/></p>
-			<p><img src="setumei.png" width="535" height="43" alt="『いい話と思ったらシェアジェネレータ「つくし」』は、Facebookでシェアされやすい”いい話”を作るジェネレータです。" title="『いい話と思ったらシェアジェネレータ「つくし」』は、Facebookでシェアされやすい”いい話”を作るジェネレータです。"/></p>
-			<br />
-			<p><a href="#"><img src="button_1.png" width="275" height="35" alt="いい話をジェネレートする" title="いい話をジェネレートする"/></a></p>
-			<br />
-			<iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2F%25E3%2581%25A4%25E3%2581%258F%25E3%2581%2597%25E3%2583%25AC%25E3%2582%25B3%25E3%2583%25BC%25E3%2582%25BA%2F111664325581937&amp;width=292&amp;height=62&amp;show_faces=false&amp;colorscheme=light&amp;stream=false&amp;show_border=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:292px; height:62px;" allowTransparency="true"></iframe>
-		</div>
-		<div id="contents">
-			<div id="contents-img">
-				<img src="sample.jpg"/>
-			</div>
-			<div id="text">
-			<p>
-				「魚の釣り方」のお話です。<br />
-				<br />
-				<br />
-				 「娘の結婚式が決まってからというもの、時間ができると『リハビリに連れて行ってくれ』と言うようになって、それも子どもたちには内緒で」<br />
-				<br />
-				 てんとう虫コミックス第１８巻より<br />
-				<br />
-				 「行くぞ」<br />
-				<br />
-				 あいつの顔を見ていたら、<br />
-				<br />
-				 苦しいだろうくやしいだろう<br />
-				<br />
-				 「名前まで知っているから、本当の知り合いの子供たちかと思ったよ」<br />
-				<br />
-				 草なぎ剛 訳<br />
-				<br />
-				 如何されたのですか？」<br />
-				<br />
-				 「娘には内緒なのですが、実は主人が歩く練習をしているんです」<br />
-				<br />
-				 そう心の中で思っていた。<br />
-				<br />
-				 しばらくの間を空けて、<br />
-				<br />
-				 こういう時代を生き抜くために、もっとも必要なのは「自分で考える力」を養うことではないでしょうか。<br />
-				<br />
-				 十二月三十一日の<br />
-				<br />
-				 私は<br />
-				<br />
-				 最後に、<br />
-				<br />
-				<br />
-				<br />
-				<br />
-				----いい話だと思ったらシェアをお願いします m(_ _)m ----<br />
-				<br />
-			</p>
-			</div>
-			<div id="contents-img">
-				<p><a href="#"><img src="button_2.png" width="245" height="35" alt="Facebookでシェアする" title="Facebookでシェアする"/></a></p>
-			</div>
-		</div>
-		<div id="footer">
-			<p><a href="http://tuxurecords.tumblr.com/" target="_blank" alt="Powered by つくしレコーズ" title="Powered by つくしレコーズつくしレコーズ"><img width="250" height="10" src="powered.png"/></a></p>
-		</div>
-	</div>
+  <div id="background">
+    <div id="header">
+      <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fiihanashi.net&amp;layout=button_count&amp;show_faces=false&amp;width=100&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja" data-count="none" data-hashtags="tamakiep2">ツイート</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </div>
+    <a href="http://tuxurecords.tumblr.com/" target="_blank" alt="つくしレコーズ" title="つくしレコーズ"><img width="120" height="52" border="0" style="position:absolute; left:25px; top:25px; margin:0px; padding:0px" src="tuxu_logo.png" /></a>
+    <div id="title">
+      <p><img src="logo.png" width="855" height="156" alt="いい話と思ったらシェアジェネレータ「つくし」" title="いい話と思ったらシェアジェネレータ「つくし」"/></p>
+      <p><img src="setumei.png" width="535" height="50" alt="『いい話と思ったらシェアジェネレータ「つくし」』は、Facebookでシェアされやすい”いい話”を作るジェネレータです。" title="『いい話と思ったらシェアジェネレータ「つくし」』は、Facebookでシェアされやすい”いい話”を作るジェネレータです。"/></p>
+      <br />
+      <p><a href="#"><img src="button_1.png" width="275" height="35" alt="いい話をジェネレートする" title="いい話をジェネレートする"/></a></p>
+      <br />
+      <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2F%25E3%2581%25A4%25E3%2581%258F%25E3%2581%2597%25E3%2583%25AC%25E3%2582%25B3%25E3%2583%25BC%25E3%2582%25BA%2F111664325581937&amp;width=292&amp;height=62&amp;show_faces=false&amp;colorscheme=light&amp;stream=false&amp;show_border=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:292px; height:62px;" allowTransparency="true"></iframe>
+    </div>
+    <div id="contents">
+      <div id="contents-img">
+        <img src="sample.jpg" width="450"/>
+      </div>
+      <div id="text">
+      <p>
+        「魚の釣り方」のお話です。<br />
+        <br />
+        <br />
+         「娘の結婚式が決まってからというもの、時間ができると『リハビリに連れて行ってくれ』と言うようになって、それも子どもたちには内緒で」<br />
+        <br />
+         てんとう虫コミックス第１８巻より<br />
+        <br />
+         「行くぞ」<br />
+        <br />
+         あいつの顔を見ていたら、<br />
+        <br />
+         苦しいだろうくやしいだろう<br />
+        <br />
+         「名前まで知っているから、本当の知り合いの子供たちかと思ったよ」<br />
+        <br />
+         草なぎ剛 訳<br />
+        <br />
+         如何されたのですか？」<br />
+        <br />
+         「娘には内緒なのですが、実は主人が歩く練習をしているんです」<br />
+        <br />
+         そう心の中で思っていた。<br />
+        <br />
+         しばらくの間を空けて、<br />
+        <br />
+         こういう時代を生き抜くために、もっとも必要なのは「自分で考える力」を養うことではないでしょうか。<br />
+        <br />
+         十二月三十一日の<br />
+        <br />
+         私は<br />
+        <br />
+         最後に、<br />
+        <br />
+        <br />
+        <br />
+        <br />
+        ----いい話だと思ったらシェアをお願いします m(_ _)m ----<br />
+        <br />
+      </p>
+      </div>
+      <div id="contents-img">
+        <p><a href="#"><img src="button_2.png" width="245" height="35" alt="Facebookでシェアする" title="Facebookでシェアする"/></a></p>
+      </div>
+    </div>
+    <div id="footer">
+      <p><a href="http://tuxurecords.tumblr.com/" target="_blank" alt="Powered by つくしレコーズ" title="Powered by つくしレコーズつくしレコーズ"><img width="250" height="10" src="powered.png"/></a></p>
+    </div>
+  </div>
 </div>
 
 </body>
